--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-cli": "^2.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-prettify": "^0.5.0",
     "gulp-sass": "^4.0.2",
@@ -18,7 +19,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "gulp watch"
+    "watch": "gulp"
   },
   "author": "Mandy",
   "license": "ISC"
