--- a/public/10f/manifest.json
+++ b/public/10f/manifest.json
@@ -1,16 +1,22 @@
 {
   "manifest_version": 2,
-
-  "name": "Getting started example",
-  "description": "This extension allows the user to change the background color of the current page.",
+  "name": "幹話產生器",
+  "description": "JS地下城 10F-Chrome 應用程式 (幹話產生器)",
   "version": "1.0",
-
   "browser_action": {
+    "default_title": "Mandy's sideProject",
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "permissions": [
-    "activeTab",
-    "storage"
-  ]
+  "content_scripts": [
+    {
+      "matches": ["*://www.google.com.tw/*"],
+      "js": ["content.js"]
+    }
+  ],
+  "background": {
+    "scripts": ["page.js"],
+    "persistent": false
+  },
+  "permissions": ["tabs"]
 }
