--- a/public/10f/manifest.json
+++ b/public/10f/manifest.json
@@ -16,7 +16,7 @@
     }
   },
   "chrome_url_overrides": {
-    "newtab": "newtab/index.html"
+    "newtab": "newtab.html"
   },
   "content_scripts": [
     {
