--- a/sourse/10f/package.json
+++ b/sourse/10f/package.json
@@ -27,10 +27,12 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-chrome-extension-reloader": "^1.2.0",
     "webpack-cli": "^3.3.0"
