--- a/sourse/10f/package.json
+++ b/sourse/10f/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run pack && npm run remove-evals && npm run zip",
-    "dev": "webpack --mode=development --env.NODE_ENV=development --progress --hide-modules --hot --watch",
+    "dev": "webpack --mode=development --env.NODE_ENV=development --progress --hide-modules",
     "lint": "eslint --ext .js,.vue --fix ./src",
     "pack": "webpack --mode=production --env.NODE_ENV=production --progress --hide-modules",
     "remove-evals": "node scripts/remove-evals.js",
@@ -24,11 +24,14 @@
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
+    "fast-glob": "^2.2.6",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "purgecss-webpack-plugin": "^1.4.0",
     "sass-loader": "^7.1.0",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
