--- a/sourse/10f/src/manifest.json
+++ b/sourse/10f/src/manifest.json
@@ -22,7 +22,7 @@
     "scripts": ["./background.js"],
     "persistent": false
   },
-  "permissions" : ["storage","activeTab","tabs"],
+  "permissions" : ["storage","activeTab","tabs","declarativeContent"],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
 
